--- a/css/master.css
+++ b/css/master.css
@@ -29,6 +29,8 @@ body {
   color: #2b2b2b;
   padding: 20px;
   font-size: 0; /*要素同士をぴったりくっつけるための処理、不要な改行を消す*/
+  
+  /* border: medium solid #4682b4; デバッグ用 */
 }
 
 p {
@@ -61,30 +63,43 @@ a {
   color: white;
 }
 
+
+
 .leftclum-wrapper,
-.leftclum-wrapper .container {
-  width: 230px;
+.centerclum-wrapper,
+.rightclum-wrapper {
+  height: 100vh;
+  border: medium solid #ff6347;
+  overflow-y: scroll;
+  margin: 0 5px 0 5px;
+}
+
+
+.leftclum-wrapper{
+  width: 33%;
   min-height: 100%;
   background-color: #ffffff;
 }
 
-.rightclum-wrapper,
-.rightclum-wrapper .container {
-  width: calc(35% - 270px); /*leftclum + MoveViewPageのwidth分引いた値*/
+.rightclum-wrapper{
+  width: 33%; /*leftclum + MoveViewPageのwidth分引いた値*/
   min-height: 100%;
-  /*background-color: #f5f5f5;*/
 }
 
 .leftclum-wrapper .container,
 .rightclum-wrapper .container {
-  position: fixed;
+  /* position: fixed; */
 }
 
 .MoveViewPage {
+  position: fixed;
   width: 40px;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  height: 40px;
   background-color: #ff6347;
   cursor: pointer;
+  right: 0px;
+  bottom: 0px;
 }
 
 .MoveViewPage:hover {
@@ -92,10 +107,9 @@ a {
 }
 
 .MoveViewPage .arow_box {
-  position: fixed;
   height: 100vh;
   width: 40px;
-}
+} 
 
 .MoveViewPage img {
   width: 30%;
@@ -115,9 +129,8 @@ a {
 } */
 
 .centerclum-wrapper {
-  margin: 0px;
   padding: 0px;
-  width: 65%;
+  width: 34%;
 }
 
 .work {
