--- a/css/master.css
+++ b/css/master.css
@@ -64,21 +64,18 @@ a {
 }
 
 
-
 .leftclum-wrapper,
 .centerclum-wrapper,
 .rightclum-wrapper {
   height: 100vh;
-  border: medium solid #ff6347;
-  overflow-y: scroll;
-  margin: 0 5px 0 5px;
+  border: 1px solid #2b2b2b;
+  margin: 0 2px 0 2px;
 }
 
 
 .leftclum-wrapper{
   width: 33%;
   min-height: 100%;
-  background-color: #ffffff;
 }
 
 .rightclum-wrapper{
@@ -97,12 +94,12 @@ a {
   /* min-height: 100vh; */
   height: 40px;
   background-color: #ff6347;
-  cursor: pointer;
   right: 0px;
   bottom: 0px;
 }
 
 .MoveViewPage:hover {
+  cursor: pointer;
   background: #ff7f50;
 }
 
@@ -138,13 +135,13 @@ a {
   height: calc(100% - 6px);
   margin: 5px;
   padding: 3px;
-  cursor: pointer;
   border: solid 1.5px #5d5d5d;
   text-align: left;
 }
 
-.work:hover {
+.now-active-clum .work:hover {
   background-color: #f5f5f5;
+  cursor: pointer;
 }
 
 /*画像と文字を横に並べる*/
@@ -198,7 +195,6 @@ a {
 
 .delete_article,
 .want_read_article {
-  cursor: pointer;
   margin: 0px 0;
 }
 
@@ -211,10 +207,11 @@ a {
   opacity: 0.5;
 }
 
-.delete_article h3:hover,
-.want_read_article h3:hover {
+.now-active-clum .delete_article h3:hover,
+.now-active-clum .want_read_article h3:hover {
   font-weight: bold;
   opacity: 1;
+  cursor: pointer;
 }
 
 /*leftclum*/
@@ -238,10 +235,26 @@ a {
   font-weight: solid;
 }
 
-.rightclum-wrapper input:hover {
+.now-active-clum.rightclum-wrapper input:hover {
   background: #4682b4;
 }
 
 .rightclum-wrapper input:active {
   bottom: 8px;
+}
+
+/*操作可能、不可能なコラムスタイル*/
+.now-active-clum {
+  box-shadow:0px 0px 10px;
+  overflow-y: scroll;
+  -ms-overflow-style: none;    /* IE, Edge 対応 */
+        scrollbar-width: none;       /* Firefox 対応 */
+}
+.now-active-clum::-webkit-scrollbar {  /* Chrome, Safari 対応 */
+  display:none;
+}
+
+.no-active-clum {
+  opacity: 0.2;
+  overflow-y: hidden;  
 }
