--- a/css/master.css
+++ b/css/master.css
@@ -67,35 +67,42 @@ a {
 .leftclum-wrapper,
 .centerclum-wrapper,
 .rightclum-wrapper {
+  position: absolute;
   height: 100vh;
-  border: 1px solid #2b2b2b;
-  margin: 0 2px 0 2px;
+  margin: 0;
 }
 
 
 .leftclum-wrapper{
-  width: 33%;
+  left: 0;
+  width: 60%;
   min-height: 100%;
 }
 
 .rightclum-wrapper{
-  width: 33%; /*leftclum + MoveViewPageのwidth分引いた値*/
+  right: 30px; /*MoveViewPageの分*/
+  width: 60%;
   min-height: 100%;
 }
 
-.leftclum-wrapper .container,
-.rightclum-wrapper .container {
-  /* position: fixed; */
+.centerclum-wrapper {
+  left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+  width: 70%;
+  min-height: 100%;
 }
 
 .MoveViewPage {
   position: fixed;
-  width: 40px;
-  /* min-height: 100vh; */
-  height: 40px;
+  width: 30px;
+  min-height: 100vh;
+  /* height: 40px; */
   background-color: #ff6347;
   right: 0px;
   bottom: 0px;
+  z-index: 3;
 }
 
 .MoveViewPage:hover {
@@ -104,7 +111,6 @@ a {
 }
 
 .MoveViewPage .arow_box {
-  height: 100vh;
   width: 40px;
 } 
 
@@ -119,16 +125,6 @@ a {
   transform: rotate(180deg);
 }
 
-/*
-.MoveViewPage .container{
-  padding: 0;
-  color: #ffffff;
-} */
-
-.centerclum-wrapper {
-  padding: 0px;
-  width: 34%;
-}
 
 .work {
   width: calc(100% - 6px);
@@ -245,7 +241,10 @@ a {
 
 /*操作可能、不可能なコラムスタイル*/
 .now-active-clum {
-  box-shadow:0px 0px 10px;
+  z-index: 3;
+  background: #ececec;
+  border: 4px solid #2b2b2b;
+  box-shadow:0px 0px 20px;
   overflow-y: scroll;
   -ms-overflow-style: none;    /* IE, Edge 対応 */
         scrollbar-width: none;       /* Firefox 対応 */
@@ -255,6 +254,19 @@ a {
 }
 
 .no-active-clum {
-  opacity: 0.2;
+  opacity: 0.1;
   overflow-y: hidden;  
+}
+
+.layer1 {
+  opacity: 0.03;
+  z-index: 1;
+}
+
+.layer2 {
+  z-index: 2;
+  opacity: 0.15;
+  background: #ececec;
+  border: 2px solid #2b2b2b;
+  box-shadow:0px 0px 20px;
 }
