--- a/css/master.css
+++ b/css/master.css
@@ -47,6 +47,7 @@ h2 {
 
 h3 {
   font-size: 15px;
+  margin: 5px 0;
 }
 
 li {
@@ -90,7 +91,7 @@ a {
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
-  width: 70%;
+  width: 65%;
   min-height: 100%;
 }
 
@@ -129,14 +130,14 @@ a {
 .work {
   width: calc(100% - 6px);
   height: calc(100% - 6px);
-  margin: 5px;
-  padding: 3px;
+  margin: 10px 0px;
+  padding: 10px;
   border: solid 1.5px #5d5d5d;
   text-align: left;
 }
 
 .now-active-clum .work:hover {
-  background-color: #f5f5f5;
+  background-color: #dcdcdc;
   cursor: pointer;
 }
 
@@ -185,42 +186,41 @@ a {
 /*createdclum*/
 .delete_articles,
 .want_read_articles {
-  position: absolute;
-  bottom: 70px;
+  
 }
 
-.delete_article,
-.want_read_article {
-  margin: 0px 0;
+.delete_article ,
+.want_read_article  {
+  border: 2px solid #2b2b2b;
+  margin: 10px 0px;
+  padding: 10px;
 }
 
-.delete_article h3,
-.want_read_article h3 {
-  margin: 0;
-  font-size: 10px;
-  font-weight: lighter;
-  padding: 1px;
-  opacity: 0.5;
-}
-
-.now-active-clum .delete_article h3:hover,
-.now-active-clum .want_read_article h3:hover {
-  font-weight: bold;
-  opacity: 1;
+.now-active-clum .delete_article:hover,
+.now-active-clum .want_read_article:hover {
+  background: #dcdcdc;
   cursor: pointer;
 }
+
+.delete_article p,
+.want_read_article p {
+  margin: 0;
+  font-size: 12px;
+}
+
+
 
 /*leftclum*/
 .leftclum-wrapper h1 {
   color: #203744;
 }
 
-/*rightclum*/
-.rightclum-wrapper input {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-
+/*読了ボタン*/
+.read_finish_button {
+  z-index: 3;
+  position: fixed;
+  bottom: 20px;
+  right: 50px;
   border: 0px;
   background: #203744;
   color: #fff;
@@ -231,18 +231,15 @@ a {
   font-weight: solid;
 }
 
-.now-active-clum.rightclum-wrapper input:hover {
+.read_finish_button:hover {
   background: #4682b4;
 }
 
-.rightclum-wrapper input:active {
-  bottom: 8px;
-}
 
-/*操作可能、不可能なコラムスタイル*/
+/*now-activeなコラムスタイル*/
 .now-active-clum {
   z-index: 3;
-  background: #ececec;
+  background: #f5f5f5;
   border: 4px solid #2b2b2b;
   box-shadow:0px 0px 20px;
   overflow-y: scroll;
@@ -265,8 +262,8 @@ a {
 
 .layer2 {
   z-index: 2;
-  opacity: 0.15;
+  opacity: 0.2;
   background: #ececec;
   border: 2px solid #2b2b2b;
-  box-shadow:0px 0px 20px;
+  box-shadow:0px 0px 25px;
 }
