--- a/css/master.css
+++ b/css/master.css
@@ -149,11 +149,12 @@ a {
 
 .to-move-right-clum-button,
 .to-move-left-clum-button {
+  border-radius: 10px 10px 10px 10px;
   display: none;
-  width: 33%;
-  height: 100%;
+  width: 48%;
+  height: 90%;
   z-index: 3;
-  opacity: 0.7;
+  opacity: 0.15;
   position: absolute;
   transition: all 250ms 0s ease;
 }
@@ -183,14 +184,14 @@ a {
 
 .to-move-right-clum-button{
   background: #000080;
-  right: 0;
-  top: 0;
+  right: 1%;
+  top: 5%;
 }
 
 .to-move-left-clum-button{
   background: #dc143c;
-  left: 0;
-  top: 0;
+  left: 1%;
+  top: 5%;
 }
 
 
