--- a/css/master.css
+++ b/css/master.css
@@ -78,12 +78,56 @@ a {
   left: 0;
   width: 60%;
   min-height: 100%;
+  background: #f8dee2;
+}
+
+.leftclum-wrapper::before {
+  content: "";
+  display: inline-block;
+  width: 17.5vw;
+  height: 100%;
+  background: #dc143c;
+}
+
+.now-active-clum.leftclum-wrapper::before {
+  display: none;
 }
 
 .rightclum-wrapper{
   right: 30px; /*MoveViewPageの分*/
   width: 60%;
   min-height: 100%;
+  background: #d3eafa;
+  text-align: right;
+}
+
+.rightclum-wrapper .container{
+  text-align: left;
+}
+
+.rightclum-wrapper::before {
+  content: "";
+  display: inline-block;
+  width: calc(17.5vw - 30px);
+  height: 100%;
+  background: #4682b4;
+}
+
+.no-active-clum.rightclum-wrapper:hover{
+  opacity: 0.6;
+  transition: all 250ms 0s ease;
+}
+.no-active-clum.leftclum-wrapper:hover{
+  opacity: 0.3;
+  transition: all 250ms 0s ease;
+}
+.no-active-clum.centerclum-wrapper:hover {
+  opacity: 0.7;
+  transition: all 250ms 0s ease;
+}
+
+.now-active-clum.rightclum-wrapper::before {
+  display: none;
 }
 
 .centerclum-wrapper {
@@ -93,6 +137,19 @@ a {
     -ms-transform: translateX(-50%);
   width: 65%;
   min-height: 100%;
+  background: #f5f5f5;
+}
+
+.centerclum-wrapper::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  background: #cccccc;
+}
+
+.now-active-clum.centerclum-wrapper::before {
+  display: none;
 }
 
 .MoveViewPage {
@@ -139,7 +196,7 @@ a {
 }
 
 .now-active-clum .work:hover {
-  background-color: #dcdcdc;
+  background-color: #e2e2e2;
   cursor: pointer;
 }
 
@@ -202,6 +259,19 @@ a {
   width: 70%;
 }
 
+.work-txt h3 {
+  display: inline-block;
+}
+
+.work-txt h4 {
+  color: #4682b4;
+  font-style:italic;
+  font-size: 12px;
+  padding: 2px;
+  margin: 0 0px 0 5px;
+  display: inline-block;
+}
+
 .workImg {
   display: inline-block;
   /*overflow: hidden;*/
@@ -237,6 +307,17 @@ a {
   display: none;
 }
 
+.drop-list{
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.now-sort-selected{
+  background-color: #203744;
+  color: #fff;
+}
+
 
 /*createdclum*/
 .delete_articles,
@@ -253,9 +334,13 @@ a {
   transition: all 250ms 0s ease;
 }
 
-.now-active-clum .delete_article:hover,
+.now-active-clum .delete_article:hover{
+  background: #ffcece;
+  cursor: pointer;
+}
+
 .now-active-clum .want_read_article:hover {
-  background: #dcdcdc;
+  background: #cdd6ff;
   cursor: pointer;
 }
 
@@ -296,9 +381,9 @@ a {
 /*now-activeなコラムスタイル*/
 .now-active-clum {
   z-index: 3;
-  background: #f5f5f5;
+  /* background: #f5f5f5; */
   border: 4px solid #2b2b2b;
-  box-shadow:0px 0px 20px;
+  box-shadow:0px 0px 25px;
   overflow-y: scroll;
   -ms-overflow-style: none;    /* IE, Edge 対応 */
         scrollbar-width: none;       /* Firefox 対応 */
@@ -311,18 +396,29 @@ a {
 
 .no-active-clum {
   opacity: 0.1;
-  overflow-y: hidden;  
+  overflow-y: hidden;
+  border: 2px solid #2b2b2b;
 }
 
+/* 
+.no-active-clum.rightclum-wrapper:hover{
+  background-color: #4682b4;
+  transition: all 300ms 0s ease;
+}
+
+.no-active-clum.leftclum-wrapper:hover{
+  background-color: #dc143c;
+  transition: all 300ms 0s ease;
+} */
+
 .layer1 {
-  opacity: 0.03;
   z-index: 1;
 }
 
 .layer2 {
   z-index: 2;
-  opacity: 0.2;
-  background: #ececec;
-  border: 2px solid #2b2b2b;
+  opacity: 0.3;
+  /* background: #ececec; */
   box-shadow:0px 0px 25px;
 }
+
