--- a/css/master.css
+++ b/css/master.css
@@ -81,7 +81,7 @@ a {
   background: #f8dee2;
 }
 
-.leftclum-wrapper::before {
+/* .leftclum-wrapper::before {
   content: "";
   display: inline-block;
   width: 17.5vw;
@@ -91,7 +91,7 @@ a {
 
 .now-active-clum.leftclum-wrapper::before {
   display: none;
-}
+}  */
 
 .rightclum-wrapper{
   right: 30px; /*MoveViewPageの分*/
@@ -105,7 +105,7 @@ a {
   text-align: left;
 }
 
-.rightclum-wrapper::before {
+/* .rightclum-wrapper::before {
   content: "";
   display: inline-block;
   width: calc(17.5vw - 30px);
@@ -113,22 +113,21 @@ a {
   background: #4682b4;
 }
 
-.no-active-clum.rightclum-wrapper:hover{
-  opacity: 0.6;
-  transition: all 250ms 0s ease;
-}
-.no-active-clum.leftclum-wrapper:hover{
-  opacity: 0.3;
-  transition: all 250ms 0s ease;
-}
-.no-active-clum.centerclum-wrapper:hover {
-  opacity: 0.7;
-  transition: all 250ms 0s ease;
-}
-
 .now-active-clum.rightclum-wrapper::before {
   display: none;
+} */
+
+.no-active-clum.rightclum-wrapper:hover,
+.no-active-clum.leftclum-wrapper:hover{
+  opacity: 0.5;
+  transition: all 200ms 0s ease;
 }
+.no-active-clum.centerclum-wrapper:hover {
+  background: #e4e4e4;
+  transition: all 200ms 0s ease;
+}
+
+
 
 .centerclum-wrapper {
   left: 50%;
@@ -140,7 +139,7 @@ a {
   background: #f5f5f5;
 }
 
-.centerclum-wrapper::before {
+/* .centerclum-wrapper::before {
   content: "";
   width: 100%;
   height: 100%;
@@ -150,7 +149,7 @@ a {
 
 .now-active-clum.centerclum-wrapper::before {
   display: none;
-}
+} */
 
 .MoveViewPage {
   position: fixed;
@@ -213,7 +212,7 @@ a {
   z-index: 3;
   opacity: 0.15;
   position: absolute;
-  transition: all 250ms 0s ease;
+  transition: all 200ms 0s ease;
 }
 
 .to-move-right-clum-button h2,
@@ -331,7 +330,7 @@ a {
   margin: 10px 0px;
   padding: 10px;
 
-  transition: all 250ms 0s ease;
+  transition: all 200ms 0s ease;
 }
 
 .now-active-clum .delete_article:hover{
@@ -388,14 +387,14 @@ a {
   -ms-overflow-style: none;    /* IE, Edge 対応 */
         scrollbar-width: none;       /* Firefox 対応 */
   
-  transition: all 250ms 0s ease;
+  transition: all 100ms 0s ease;
 }
 .now-active-clum::-webkit-scrollbar {  /* Chrome, Safari 対応 */
   display:none;
 }
 
 .no-active-clum {
-  opacity: 0.1;
+  opacity: 0.2;
   overflow-y: hidden;
   border: 2px solid #2b2b2b;
 }
@@ -417,7 +416,8 @@ a {
 
 .layer2 {
   z-index: 2;
-  opacity: 0.3;
+  opacity: 1;
+  background: #ffffff;
   /* background: #ececec; */
   box-shadow:0px 0px 25px;
 }
