--- a/css/master.css
+++ b/css/master.css
@@ -124,9 +124,13 @@ a {
 }
 .no-active-clum.centerclum-wrapper:hover {
   background: #e4e4e4;
+  border: 2px solid #2b2b2b;
   transition: all 200ms 0s ease;
 }
-
+.no-active-clum.centerclum-wrapper:hover .container {
+  color:#2b2b2b;
+  transition: all 200ms 0s ease;
+}
 
 
 .centerclum-wrapper {
@@ -418,7 +422,12 @@ h4 {
   z-index: 2;
   opacity: 1;
   background: #ffffff;
+  border: 2px solid rgba(0,0,0,0.3);
   /* background: #ececec; */
   box-shadow:0px 0px 25px;
+}
+
+.layer2 .container {
+  color:rgba(0,0,0,0.3);
 }
 
