--- a/css/master.css
+++ b/css/master.css
@@ -34,7 +34,7 @@ body {
 }
 
 p {
-  font-size: 11px;
+  font-size: 12px;
 }
 
 h1 {
@@ -46,7 +46,7 @@ h2 {
 }
 
 h3 {
-  font-size: 12px;
+  font-size: 14px;
   margin: 5px 0;
 }
 
@@ -272,7 +272,7 @@ h3 {
 h4 {
   color: #4682b4;
   font-style:italic;
-  font-size: 10px;
+  font-size: 11px;
   padding: 2px;
   margin: 0 0px 0 5px;
   display: inline-block;
@@ -282,13 +282,14 @@ h4 {
   display: inline-block;
   /*overflow: hidden;*/
   width: 30%;
-  max-width: 200px;
   padding: 10px;
   float: right;
 }
 
 .workImg img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 150px;
+  float: right;
 }
 
 .work:after {
