--- a/css/reader.css
+++ b/css/reader.css
@@ -38,11 +38,21 @@ h1 {
 }
 
 h2 {
+  margin-top: 0px;
   font-size: 20px;
 }
 
 h3 {
   font-size: 10px;
+}
+
+h4 {
+  color: #4682b4;
+  font-style:italic;
+  font-size: 11px;
+  padding: 2px;
+  margin: 0 0px 0 0px;
+  display: inline-block;
 }
 
 li {
@@ -87,7 +97,7 @@ a {
 }
 
 .MoveViewPage {
-  width: 40px;
+  width: 30px;
   min-height: 100vh;
   background-color: #ff6347;
 }
@@ -98,7 +108,7 @@ a {
 
 .MoveViewPage .arow_box {
   height: 100vh;
-  width: 40px;
+  width: 30px;
   position: fixed;
 }
 
@@ -113,8 +123,14 @@ a {
 }
 
 .work-block {
-  margin: 10px 0 50px 0;
+  margin: 10px 0 90px 0;
 }
+
+.work-block:not(.now-sort-selected),
+.read-work:not(.now-sort-selected){
+  display: none;
+}
+
 
 .work-block:after{
 	content: "";
@@ -126,4 +142,10 @@ a {
   float: right;
   width: 30%;
   padding: 0 0 30px 30px;
+}
+
+.drop-list {
+  position: fixed;
+  right: 40px;
+  top: 20px;
 }
